--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body {
     width: 100%;
 }
 
+body {
+    background: #f7f7f7;
+
+}
+
 .page1 {
     min-height: 100vh;
     width: 100%;
@@ -106,8 +111,35 @@ body {
 
 
 .page3 {
-    height: 100vh;
+    min-height: 130vh;
     width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.child {
+    height: 55vh;
+    width: 40vw;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.child img {
+    height: 100%;
+}
+
+.cursor {
+    height: 180px;
+    width: 180px;
+    background: red;
+    border-radius: 50%;
+    position: fixed;
+    transform: translate(-50%, -50%) scale(0);
 }
 
 @media (max-width:600px) {
