--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
 }
 
-a::selection {
+* ::selection {
     color: white;
     background: #000;
 }
@@ -38,7 +38,6 @@ body {
 
 .nav-part1 {
     height: 82px;
-    background: red;
     overflow: hidden;
 }
 
@@ -196,7 +195,58 @@ body {
 }
 
 @media (max-width:600px) {
+    .nav {
+        width: 100%;
+        position: fixed;
+        z-index: 99;
+        padding: 15px;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
 
+    }
+
+    .nav-part1 {
+        height: 67px;
+        overflow: hidden;
+    }
+
+    .nav-part1 svg {
+        display: block;
+        height: 67px;
+        width: 80px;
+    }
+
+    .nav .twogoodlogo {
+        height: 40px;
+        margin-left: -20px;
+    }
+
+    .nav .nav-part2 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 40px;
+    }
+
+    .links {
+        padding: 10px;
+        display: none;
+    }
+
+
+
+    .icons {
+        padding: 7px;
+        border-radius: 50px;
+        background: #f7f7f7;
+    }
+
+    .nav-part2 .icons i {
+        font-size: 15px;
+        margin: 0 20px;
+        font-weight: 100;
+    }
 
     .page1 {
         min-height: 70vh;
@@ -249,5 +299,37 @@ body {
         margin-bottom: 3vw;
     }
 
+    .page3 {
+        min-height: 130vh;
+        width: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+
+    .child {
+        height: 55vh;
+        padding: 15vw;
+        width: 88vw;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .child img {
+        height: 100%;
+    }
+
+    .cursor {
+        height: 180px;
+        width: 180px;
+        background: red;
+        border-radius: 50%;
+        position: fixed;
+        transform: translate(-50%, -50%) scale(0);
+    }
 
 }
